--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -16,7 +16,7 @@ $primary   : #8661c1;
 $secondary : #06aed5;
 $accent    : #f3eff5;
 
-$dark      : #691760;
+$dark      : #551a8b;
 
 $positive  : #9cec5b;
 $negative  : #f93943;
