More product features!

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -20,5 +20,5 @@ $dark      : #551a8b;
 
 $positive  : #9cec5b;
 $negative  : #f93943;
-$info      : #fcfc62;
+$info      : #f2c037;
 $warning   : #f9cb40;
